src/objects/AcctSeed__GL_Account__c.object
<CustomObject>
    <description>Used to document the general ledger accounts used by the financial suite accounting application. This is a traditional general ledger account.</description>
    <fields>
        <fullName>AcctSeed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Denotes if the GL Account is active. Most filtered lookups to the GL Account object look for an active status.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the GL Account can be selected to record Cash Receipts and Disbursements and used in Bank Direct Connect and Bank Reconciliation.</inlineHelpText>
        <label>Bank/Credit Card Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Description__c</fullName>
        <inlineHelpText>This is an alternate name for the GL Account when used in Billings to display a more customer Friendly description of the GL Account. This feature only is applicable to Revenue GL Accounts.</inlineHelpText>
        <label>Billing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_Report_Name__c</fullName>
        <inlineHelpText>Used in expense report entry screen to provide a more user friendly name for a GL Account</inlineHelpText>
        <label>Expense Report Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Category__c</fullName>
        <inlineHelpText>The GL Category type classifies GL accounts according to where they are found on your financial statements. In this way they are similar to Type and Sub Type 1 fields which are reporting driven. This field tells the system what function it serves.</inlineHelpText>
        <label>GL Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Input VAT</fullName>
                </value>
                <value>
                    <fullName>Output VAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Mileage_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the account is to be used to track Mileage in Expenses Reports.</inlineHelpText>
        <label>Mileage Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Mileage_Rate__c</fullName>
        <inlineHelpText>Used for mileage rate for expenses.</inlineHelpText>
        <label>Mileage Rate</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Type_1__c</fullName>
        <inlineHelpText>Used in conjunction with the Type field to further classify GL Accounts. Balance Sheet accounts must be Assets, Liabilities or Owners Equity.</inlineHelpText>
        <label>Sub Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AcctSeed__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
                <value>
                    <fullName>Owners Equity</fullName>
                </value>
                <value>
                    <fullName>Product Revenue</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Service Revenue</fullName>
                </value>
                <value>
                    <fullName>General &amp; Administrative</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Investing</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Type_2__c</fullName>
        <inlineHelpText>Used in conjunction with the Type and Subtype 1 fields to further classify GL Accounts in reports. This pick list is dependent on Subtype 1.</inlineHelpText>
        <label>Sub Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AcctSeed__Sub_Type_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Long Term Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Long Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Product Family 1</fullName>
                </value>
                <value>
                    <fullName>Product Family 2</fullName>
                </value>
                <value>
                    <fullName>Product Family 3</fullName>
                </value>
                <value>
                    <fullName>Service Family 1</fullName>
                </value>
                <value>
                    <fullName>Service Family 2</fullName>
                </value>
                <value>
                    <fullName>Service Family 3</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Overhead</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Payroll Taxes</fullName>
                </value>
                <value>
                    <fullName>Salary &amp; Wages</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Marketing Events</fullName>
                </value>
                <value>
                    <fullName>Sales Travel</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Executive Benefits</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__TM_Revenue_Conversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for correctly mapping expense related transactions to the proper revenue related GL Account when creating Billing records from Time Card or Expense Report records.</inlineHelpText>
        <label>Time and Expense Revenue Conversion</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>Project_GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <inlineHelpText>Must be Balance Sheet, Revenue or Expense.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                    <default>true</default>
                    <label>Balance Sheet</label>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Used_in_Expense_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must be marked checked to be available for selection in submitting an expense.</inlineHelpText>
        <label>Used in Expense Reports</label>
        <type>Checkbox</type>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>AcctSeed__All1</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Sub_Type_1__c</columns>
        <columns>AcctSeed__Sub_Type_2__c</columns>
        <columns>AcctSeed__Bank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Balance_Sheet</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Sub_Type_1__c</columns>
        <columns>AcctSeed__Sub_Type_2__c</columns>
        <columns>AcctSeed__Bank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Balance Sheet</value>
        </filters>
        <label>Balance Sheet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Cash_Flow_Categories</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Sub_Type_1__c</columns>
        <columns>AcctSeed__Sub_Type_2__c</columns>
        <columns>AcctSeed__Bank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Cash Flow</value>
        </filters>
        <label>Cash Flow Categories</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Expense</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Sub_Type_1__c</columns>
        <columns>AcctSeed__Sub_Type_2__c</columns>
        <columns>AcctSeed__Bank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </filters>
        <label>Expense</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Revenue</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Sub_Type_1__c</columns>
        <columns>AcctSeed__Sub_Type_2__c</columns>
        <columns>AcctSeed__Bank__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </filters>
        <label>Revenue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Mileage_Acccount_Require_Rate</fullName>
        <active>true</active>
        <description>Require a mileage rate if the GL Account is a mileage account</description>
        <errorConditionFormula>AcctSeed__Mileage_Account__c = true &amp;&amp; ISBLANK( AcctSeed__Mileage_Rate__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Mileage_Rate__c</errorDisplayField>
        <errorMessage>You must specify a mileage rate for a mileage account.</errorMessage>
    </validationRules>
</CustomObject>